components/media/envs/prod/jellyfin/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.11.11
