components/media/envs/prod/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: nginx-external
  rules:
    - host: jellyfin.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jellyfin
                port:
                  name: jellyfin
